# vin

./: .gitignore  .linkcheckerrc  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  hatch.toml  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml  lint-and-test.yaml  lint-and-test.yml  publish.yaml  release.yml
data/: manufacturers.json
docs/: api.md  help.md  hooks.py  index.md  requirements.txt
docs.sphinx/source/: conf.py
docs/source/: api.rst  conf.py  index.rst
docs/vpic/: about.md
scripts/: get-manufacturers.py
src/vin/: __about__.py  __init__.py  cars-and-light-trucks.csv  constants.py  database.py  wmi.json
src/vin/scripts/: get-manufacturers.py
tests/: __init__.py  test_lookup.py  test_lookup.yaml  test_version.py  test_vin.py  test_vin_exceptions.py  test_vin_exceptions.yaml
tests/benchmarks/: conftest.py  test_benchmark.py
tests/cars/: README.md  test_decode.py  test_decode.yaml  test_europe.py  test_ford.py  test_ford.yaml  test_honda.py  test_honda.yaml  test_kia.py  test_kia.yaml  test_tesla.py  test_tesla.yaml  test_trim.py
tests/motorcycles/: test_decode.py  test_decode.yaml
