[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vin"
dynamic = ["version"]
description = 'Vehicle Identification Number'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ['vin', 'nhtsa', 'vehicle']
authors = [
  { name = "David Peckham", email = "dave.peckham@icloud.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/vin#readme"
Issues = "https://github.com/unknown/vin/issues"
Source = "https://github.com/unknown/vin"

[tool.hatch.version]
path = "src/vin/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vin tests}"

[tool.coverage.run]
source_pkgs = ["vin", "tests"]
branch = true
parallel = true
omit = [
  "src/vin/__about__.py",
]

[tool.coverage.paths]
vin = ["src/vin", "*/vin/src/vin"]
tests = ["tests", "*/vin/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
